<resources>
    <string name="app_name">Efforts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="client_id">07fbb8e4-8caa-4b91-a7f6-1db581164c9f</string>
    <string name="client_secret">qV60eBr0qGw3tbSvJ2kl86AH</string>
    <string name="redirect_uri">https://android.efforts.trd.client.nx.tsun.moe/oauth/callback</string>


    <string-array name="attendance">
        <item>Masuk</item>
        <item>Keluar</item>
        <item>Sakit</item>
        <item>Lain-Lain</item>
    </string-array>

    <string-array name="task_status">
        <item>Tertunda</item>
        <item>Selesai</item>
        <item>Diterima</item>
        <item>Ditolak</item>
        <item>Lain-Lain</item>
    </string-array>

    <string-array name="home_menu_list">
        <item>Absen</item>
        <item>Report</item>
        <item>Task</item>
        <item>News</item>
        <item>Kompetitor</item>
        <!--<item>Forum</item>-->
        <!--<item>API List</item>-->
    </string-array>

    <!-- URL List -->
    <string name="base_url">https://dell-api.verifi.care</string>
    <string name="login">https://dell-api.verifi.care/login</string>
    <string name="create_attendance">https://dell-api.verifi.care/absences/create</string>
    <string name="create_sellout">https://dell-api.verifi.care/sellouts/create</string>
    <string name="create_inventory">https://dell-api.verifi.care/inventories/create</string>
    <string name="create_issue">https://dell-api.verifi.care/issues/create</string>
    <string name="list_all_post">https://dell-api.verifi.care/posts/list</string>
    <string name="list_posms">https://dell-api.verifi.care/posms/list</string>
    <string name="list_saleskits">https://dell-api.verifi.care/sell_kits/list</string>
    <string name="get_post">https://dell-api.verifi.care/posts/</string>
    <string name="get_comment">https://dell-api.verifi.care/posts/list_comments/</string>
    <string name="add_comment">https://dell-api.verifi.care/posts/create_comment/</string>
    <string name="create_visibility">https://dell-api.verifi.care/visibilities/create</string>
    <string name="create_posm_inventory">https://dell-api.verifi.care/posms/inventory/create</string>

    <!-- Barcode Activity -->
    <string name="barcode_command">Letakan gambar Barcode di dalam area pemindai</string>

    <!-- QRCode Activity -->
    <string name="qrcode_command">Letakan gambar QRCode di dalam area pemindai</string>
    <string name="turn_on_flashlight">Nyalakan Lampu</string>
    <string name="turn_off_flashlight">Matikan Lampu</string>

    <!-- Competitor Fragment -->
    <string name="title_competitor_fragment">Kompetitor</string>
    <string name="information_label">Informasi</string>
    <string name="information_hint">Masukan informasi kompetitor disini</string>
    <string name="impact_label">Dampak</string>
    <string name="current_date_competitor_fragment_label">Tanggal</string>
    <string name="current_date_competitor_fragment_hint">Masukan tanggal disini</string>
    <string name="submit_button_competitor_fragment">Kirim</string>

    <string name="dashboard_title">Beranda</string>
    <string name="title_attendance_fragment">Absen</string>
    <!--<string name="title_competitor_fragment">Kompetitor</string>-->
    <string name="title_Forum_fragment">Forum</string>
    <string name="title_inventory_fragment">Inventaris</string>
    <string name="title_product_knowledge_fragment">Sales Kit</string>
    <string name="title_sellout_fragment">Penjualan</string>

    <string name="title_logout">Keluar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
