<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard_title" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_attendance"
            android:title="@string/title_attendance_fragment" />
        <item
            android:id="@+id/nav_sellout2"
            android:icon="@drawable/ic_sellout"
            android:title="Report" />
        <item
            android:id="@+id/nav_competitor2"
            android:icon="@drawable/ic_competitor"
            android:title="Task" />
        <item
            android:id="@+id/nav_sellout"
            android:icon="@drawable/ic_sellout"
            android:title="News" />
        <item
            android:id="@+id/nav_competitor"
            android:icon="@drawable/ic_competitor"
            android:title="@string/title_competitor_fragment" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/title_logout" />
    </group>
</menu>
